<resources>
    <string name="app_name">Panic Assist</string>
    <string name="main_button">HELP!</string>
    <string name="greeting">Welcome to Panic Assist!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="title_activity_settings_greeting">Welcome to settings!</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_message_send_alert">Send default alert now? \nSeconds until sent: </string>
    <string name="send_default">Send!</string>
    <string name="send_custom">Customize</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message_sent">Sent!</string>
    <string name="title_activity_customize_alert">Customize Alert</string>
    <string name="title_activity_phone_numbers">Emergency Numbers</string>
    <string name="dialog_about_title">About Panic Assist</string>
    <string name="dialog_about_body">What originally started as a school project, turned into something much more, and is helping people all around the globe have a little bit more piece of mind by what their smart phones can do for them in the case of an instantaneous and extreme emergency.</string>
    <string name="okay">Okay</string>
    <string name="action_headphones">Send alert on audio unplug</string>
    <string name="phonenumbers_label">Saved numbers:</string>
    <string name="phonenumbers_suggested_label">Suggested numbers for your area:</string>
    <string name="title_activity_help">Help</string>
    <string name="notifications">Notifications:</string>
    <string name="title_activity_notfication">Notfication</string>
    <string name="close">Close</string>
    <string name="action_terms">Terms of service</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="open_dialer">Open in dialer</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="help_details">Welcome to the help page, there will be more resources added here soon.
        For now, just know that if get a username and add some contacts, you\'ll be able to notify
        them of your location in the event of an emergency with the press of a button.</string>
    <string name="message_text">Message Text:</string>
    <string name="quick_text">Quick Text</string>
    <string name="To">To…</string>
    <string name="sendGPSLocation">Send GPS Location</string>
    <string name="viewAlert">View Alert</string>
    <string name="allow">Allow</string>
    <string name="ignore">Ignore</string>
    <string name="message">Message:</string>
    <string name="GPSLocation">GPS Location:</string>
    <string name="viewOnMap">View On Map</string>
    <string name="deleteNotification">Delete Notification</string>
    <string name="deleteNotificationQuestion">Delete Notification?</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBbKOr_w2f8ikv0_vTkydGXO8H24QNps1Y</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account">Account</string>
    <string name="yourSavedNumbers">Your saved phone numbers for quick access</string>
    <string name="emergencyNumbers">Emergency Numbers</string>
    <string name="contacts">Contacts</string>
    <string name="yourContacts">Your contacts you can notify of your situation</string>
    <string name="quickMessage">Quick Messages</string>
    <string name="quickMessages">Pre-typed messages</string>
    <string name="title_activity_account">Account</string>
    <string name="userName">User Name:</string>
    <string name="userNameNote">Note: This is how other users can add you as a contact on their Panic Assist app. If another user adds you as a contact, that does NOT add them as
        a contact for you, you must do so separately.</string>
    <string name="title_activity_quick_messages">Quick Messages</string>
    <string name="quickMessageDialog">Quick Message</string>
    <string name="title_activity_emergency_numbers">Emergency Numbers</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="userName2">User Name</string>
    <string name="yourUserName">Your user name</string>
    <string name="preference_file_phone_numbers_key">edu.cpp.PanicAssist.PREFERENCE_FILE_PHONE_NUMBERS_KEY</string>
    <string name="preference_file_quick_text_key">edu.cpp.PanicAssist.PREFERENCE_FILE_QUICK_TEXT_KEY</string>
    <string name="preference_file_contacts_key">edu.cpp.PanicAssist.PREFERENCE_FILE_CONTACTS_KEY</string>
    <string name="preference_file_notifications_key">edu.cpp.PanicAssist.PREFERENCE_FILE_NOTIFICATIONS_KEY</string>
    <string name="preference_file_general_settings_key">edu.cpp.PanicAssist.PREFERENCE_GENERAL_KEY</string>
    <string name="welcomeMessage">Welcome and thank you for choosing  the Panic Assist app.  For a complete guide on how to use this app to its fullest, please view the tutorial located on the help page.</string>
    <string name="welcome">Welcome!</string>
    <string name="chooseAUsername">Please choose a username</string>

    <string-array name="time_delay_array">
        <item>10 Seconds</item>
        <item>20 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
    </string-array>

</resources>
