<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/headphones_menu_checkbox" android:title="@string/action_headphones"
        android:orderInCategory="0" app:showAsAction="never"
        android:checkable="true"
        />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="20" app:showAsAction="never"/>

    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="90" app:showAsAction="never" />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
