<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cpp.preston.saveme.NotificationAlertActivity"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:text="John send an alert at 10:30PM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whoWhenText"
        android:textSize="30sp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="40">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="20sp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_blue_grey_900"
            android:textSize="19sp"
            android:text="Please help me........ blah blah blah blah blah blah blah blah "/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="40">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GPSLocation"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_blue_grey_900"
            android:text="Latitude: 40.712312 \nLongitude: -74.0057372"
            android:textSize="20sp"
            android:id="@+id/GPScoords"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewMapButton"
        android:text="@string/viewOnMap"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteNotificationButton"
        android:text="@string/deleteNotification"/>

</LinearLayout>
