<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cpp.preston.saveme.SettingsActivity"
    android:background="@android:color/black"
    android:orientation="vertical">

    <!-- ACCOUNT SETTING -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountSetting"
        android:orientation="vertical">

        <TextView
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text="Coolguy5 delte me please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountName"
            android:paddingBottom="10dp"
            android:textSize="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray"/>

        </LinearLayout>

    <!-- EMERGENCY NUMBERS SETTING -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numbersSetting"
        android:orientation="vertical">

        <TextView
            android:text="@string/emergencyNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text="@string/yourSavedNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <!-- CONTACTS SETTING -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactsSetting"
        android:orientation="vertical">

        <TextView
            android:text="@string/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text="@string/yourContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <!-- QUICK MESSAGES SETTING -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quickMessagesSetting"
        android:orientation="vertical">

        <TextView
            android:text="@string/quickMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="17dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text="@string/quickMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <!-- SEND ON UNPLUG SETTING -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unplugSetting"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Send alert if audio jack unplugs"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time delay [needs to be implimented] "
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delayTimeSpinner"
                ></Spinner>

            </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:visibility="visible"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>


</LinearLayout >
