<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cpp.preston.PanicAssist.ContactsActivity"
    android:orientation="vertical"
    android:background="@android:color/black">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            android:id="@+id/phoneNumberRadioButton"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName2"
            android:id="@+id/userNameRadioButton"/>

        </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addContactImageButton"
            android:background="@android:drawable/ic_input_add"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:id="@+id/contactNameText"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:imeOptions="actionNext"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:id="@+id/contactNumberOrUserText"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:inputType="phone"
                android:imeOptions="actionDone"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:id="@+id/ContactsListView"></ListView>

</LinearLayout>
